--- a/Chalkable.Web/assets/jade/activities/apps/app-category-dialog.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-category-dialog.jade
@@ -11,5 +11,5 @@
                     label Description:
                     input(type="text",name="description", value=self.description)
                 .x-form-field
-                +Button(type="submit").special-button.blue-button.submit-btn Submit
+                +Button()(type="submit").special-button.blue-button.submit-btn Submit
                 +Button.special-button.red-button Cancel
