--- a/Chalkable.Web/assets/jade/activities/departments/department-dialog.jade
+++ b/Chalkable.Web/assets/jade/activities/departments/department-dialog.jade
@@ -13,5 +13,5 @@
                 .x-form-field
                     label Keywords:
                     input(type="text",name="keywords", value=self.keywords)
-                +Button(type="submit").special-button.blue-button.submit-btn Submit
+                +Button()(type="submit").special-button.blue-button.submit-btn Submit
                 +Button.special-button.red-button.close Cancel
