--- a/Chalkable.Web/assets/jade/activities/district/district-dialog.jade
+++ b/Chalkable.Web/assets/jade/activities/district/district-dialog.jade
@@ -23,5 +23,5 @@
                 .x-form-field
                     label SIS System Type:
                     input(type="text",name="sissystemtype", value=self.sisSystemType)
-                +Button(type="submit").special-button.blue-button.submit-btn Submit
+                +Button()(type="submit").special-button.blue-button.submit-btn Submit
                 +Button.special-button.red-button.close Cancel
