--- a/Chalkable.Web/assets/jade/activities/profile/ChangePassword.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/ChangePassword.jade
@@ -10,5 +10,5 @@
                 input(name="newPasswordConfirmation", id="newPasswordConfirmation", type="password", class="validate[required, equals[newPassword]]")
         br
         .section-buttons
-            +Button(type="submit").special-button.blue-button#submit-info-button=Msg.Save
-            +Button(type="button").special-button.blue-button#cancell-edit-info-button=Msg.Cancel
+            +Button()(type="submit").special-button.blue-button#submit-info-button=Msg.Save
+            +Button()(type="button").special-button.blue-button#cancell-edit-info-button=Msg.Cancel
