--- a/Chalkable.Web/assets/jade/activities/setup/Hello.jade
+++ b/Chalkable.Web/assets/jade/activities/setup/Hello.jade
@@ -34,6 +34,6 @@
             .form-ok
         .x-form-field
             label
-            +Button(type="submit").special-button.blue-button#confirm-button=Msg.Confirm
+            +Button()(type="submit").special-button.blue-button#confirm-button=Msg.Confirm
 
 
