--- a/Chalkable.Web/assets/jade/activities/storage/DatabaseUpdate.jade
+++ b/Chalkable.Web/assets/jade/activities/storage/DatabaseUpdate.jade
@@ -11,6 +11,6 @@
         .x-form-field
             label School Update
             textarea(name="schoolSql")
-        +Button(type="submit").special-button.blue-button.submit-btn RUN
+        +Button()(type="submit").special-button.blue-button.submit-btn RUN
 
 
