--- a/Chalkable.Web/assets/sass/partials/main/_buttons.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_buttons.scss
@@ -50,6 +50,12 @@
   }
 }
 
+.special-button, .special-button2{
+  &.disabled{
+    opacity: 0.6;
+  }
+}
+
 .special-button{
 
   padding-left: 21px;
