--- a/Chalkable.Web/assets/jade/activities/settings/TeacherSettings.jade
+++ b/Chalkable.Web/assets/jade/activities/settings/TeacherSettings.jade
@@ -54,7 +54,7 @@
                             input(name="newPasswordConfirmation", id="newPasswordConfirmation", type="password", class="validate[required, equals[newPassword]]")
                     br
                     .section-buttons
-                        +Button(type="submit").special-button.blue-button#submit-pwd-button=Msg.Save
-                        +Button(type="button").special-button.blue-button#cancell-edit-pwd-button=Msg.Cancel
+                        +Button()(type="submit").special-button.blue-button#submit-pwd-button=Msg.Save
+                        +Button()(type="button").special-button.blue-button#cancell-edit-pwd-button=Msg.Cancel
 
 
