--- a/Chalkable.Web/assets/jade/controls/button.jade
+++ b/Chalkable.Web/assets/jade/controls/button.jade
@@ -1,11 +1,11 @@
-mixin Button(isDisabled)
-    -value=attributes.value;
-    -type=attributes.type;
-    -name=attributes.name;
-    -attributes.disabled = isDisabled
+mixin Button()
+    value = attributes.value;
+    type = attributes.type;
+    name = attributes.name;
+    -if(attributes.disabled){attributes.class.push("disabled")};
 
     span.chlk-button(attributes)
         span
             span
-                button(type=type, name=name, value=value, disabled=(isDisabled===true ? "disabled" : undefined))
+                button(type=type, name=name, value=value, disabled=(attributes.disabled===true ? "disabled" : undefined))
                     block
