--- a/Chalkable.Web/assets/jade/activities/teacher/StudentsList.jade
+++ b/Chalkable.Web/assets/jade/activities/teacher/StudentsList.jade
@@ -8,8 +8,10 @@
     .action-bar.not-transparent.buttons
         .container.panel-bg
             .right
-                +ActionLink('students', 'my', [])(class=self.isMy() ? "pressed" : "")=Msg.My_Students
-                +ActionLink('students', 'all', [])(class=self.isMy() ? "" : "pressed")=Msg.Whole_School
+                +ActionLink('students', 'my', [])(class=self.isMy() ? "pressed" : "")
+                    =Msg.My_Students
+                +ActionLink('students', 'all', [])(class=self.isMy() ? "" : "pressed")
+                    =Msg.Whole_School
     +ActionForm('students', 'updateList')#people-list-form
         input(type="hidden", name="my", value=self.isMy()))
         input(type="hidden", name="classId", value=self.getTopData().getSelectedItemId()))
