updated announcement reminder functionality

--- a/Chalkable.Web/Content/src/screen-index.scss
+++ b/Chalkable.Web/Content/src/screen-index.scss
@@ -560,6 +560,7 @@ button.toplogin {
     line-height: 44px;
     color: #7e684e;
     text-transform: uppercase;
+    background: transparent !important;
     &.instant {
       margin-bottom: 30px;
     }
